--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,4 +1,4 @@
-name: Android CI
+name: Build Android APK
 
 on:
   push:
@@ -8,21 +8,22 @@ on:
 
 jobs:
   build:
-
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v3
-    - name: Set up JDK 17
-      uses: actions/setup-java@v3
-      with:
-        java-version: '17'
-        distribution: 'temurin'
-    - name: Build with Gradle
-      run: ./gradlew assembleDebug
+      - uses: actions/checkout@v3
 
-    - name: Upload APK
-      uses: actions/upload-artifact@v3
-      with:
-        name: Stoxly-APK
-        path: app/build/outputs/apk/debug/app-debug.apk
+      - name: Set up JDK 17
+        uses: actions/setup-java@v3
+        with:
+          java-version: '17'
+          distribution: 'temurin'
+
+      - name: Build with Gradle
+        run: ./gradlew assembleDebug
+
+      - name: Upload APK
+        uses: actions/upload-artifact@v4
+        with:
+          name: Stoxly-APK
+          path: app/build/outputs/apk/debug/app-debug.apk
